add folder structure

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,4 @@
 extends layout
 
 block content
-  main
-    section#tenders
-      for tender in tenders
-        p=tender.name
-    section#bids-offered
-      p offered bid 1
-    section#bids-received
-      p offered bid 2
+  h1 Welcome to Trade It Splash Page!
