--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -10,14 +10,14 @@ block content
           p=tender.description
           p=tender.tender_type
           p=tender.username
-      a(href='tenders/index') View All Tenders
+      a(href='/tenders') View All Tenders
     section#bids-offered
       h3 My Bids Made
         div.dashbord-bids-offered
           h4 bid offered
-      a(href='bids-offered/index') View all Bids Made
+      a(href='/bids-offered') View all Bids Made
     section#bids-received
       h3 My Bids Received
         div.dashboard-bids-received
           h4 bid received
-      a(href='bids-received/index') View all Bids Received
+      a(href='/bids-received') View all Bids Received
