add age checker

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,3 +2,7 @@ extends layout
 
 block content
   h1 Welcome to Trade It Splash Page!
+
+  script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+  script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
+  script(src='js/age-verification.js')
