have form mostly done, just need to get user_id from session variable when created

--- a/views/tenders/index.jade
+++ b/views/tenders/index.jade
@@ -18,4 +18,4 @@ block content
           td= tender.tender_type
           td= tender.user_id
         div
-        a(href='/tender/new') Add a Tender
+        a(href='/tenders/new') Add a Tender
