--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(href='/css/age-verification.css', rel='stylesheet')
+    link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
+    
   body
     block content
