add temporary login functionality until fb oauth

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,9 @@ extends layout
 
 block content
   h1 Welcome to Trade It Splash Page!
+  button#login Login
 
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
   script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
   script(src='js/age-verification.js')
+  script(src='js/login.js')
