just needs session variable input

--- a/views/tenders/new.jade
+++ b/views/tenders/new.jade
@@ -10,4 +10,5 @@ block content
       option(value='service') Service
       option(value='goods') Goods
     input(type='number', name='user_id', value='2', placeholder='User Id')
+    //value for user_id will be taken from session variable
     input#submit_button(type='submit', name='', value='Create New Tender')
