--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,64 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title=title
+    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css")
+    link(rel="stylesheet", href="https://code.getmdl.io/1.1.3/material.min.css")
+    link(href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css", rel="stylesheet")
+    link(type="text/css", rel="stylesheet", href="css/materialize.min.css", media="screen,projection")
+    link(rel="stylesheet", href="/stylesheets/style.css")
+    link(href='/css/age-verification.css', rel='stylesheet')
+
   body
+
+    ul#dropdown2.dropdown-content
+      li
+        a(href="#") My bids
+      li
+        a(href="#") Edit Profile
+          li.divider
+            li
+              a(href="#") Logout
+    nav
+      div.nav-wrapper
+        a.brand-logo(href="#") Trade it!
+        ul.right.hide-on-med-and-down
+          li.navText
+            a(href="/index") Home
+          li.navText
+            a(href="badges.html") Add Item
+          li.navText
+            a.dropdown-button(href="#", data-activates="dropdown2") Profile
+              i.material-icons.right
+                | arrow_drop_down
+    main
+
+
     block content
+
+    footer.page-footer
+      div.container
+        div.row
+          div.col.l6.s12
+            h5.white-text Making the world a barter place.
+
+
+          div.col.l6.s12
+            ul
+              li.info
+                a.grey-text.text-lighten-3(href="#!") About us
+              li.info
+                a.grey-text.text-lighten-3(href="#!") Contact us
+              li.info
+                a.grey-text.text-lighten-3(href="#!") FAQ
+           div.footer-copyright.col.s12
+            div.container.s12.copywrite © 2016 Tradeit
+
+
+
+
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js")
+  script(type="text/javascript", src="/javascript/main.js")
+  script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
