message form and notification switch added. In layouts moved main below block content.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     link(rel="stylesheet", href="/stylesheets/style.css")
     link(href='/css/age-verification.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
+    link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
     
   body
 
@@ -33,11 +34,11 @@ html
             a.dropdown-button(href="#", data-activates="dropdown2") Profile
               i.material-icons.right
                 | arrow_drop_down
-    main
 
 
     block content
-
+    main
+    
     footer.page-footer
       div.container
         div.row
