--- a/views/bidder/index.jade
+++ b/views/bidder/index.jade
@@ -5,6 +5,6 @@ block content
   div
     p=message
   
-    a.btn.waves-effect.waves-light(href='/bids-sent/:id', type="submit", name="action") Submit
+    a.btn.waves-effect.waves-light(href='/bids-sent/:id', type="submit", name="action") Accept
       i.material-icons.right send
        
