--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,7 +49,7 @@ html
               li.info
                 a.grey-text.text-lighten-3(href="#!") About us
               li.info
-                a.grey-text.text-lighten-3(href="#!") Contact us
+                a.grey-text.text-lighten-3(href="/contact") Contact us
               li.info
                 a.grey-text.text-lighten-3(href="#!") FAQ
            div.footer-copyright.col.s12
