finished About Us

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,7 +47,7 @@ html
           div.col.l6.s12
             ul
               li.info
-                a.grey-text.text-lighten-3(href="#!") About us
+                a.grey-text.text-lighten-3(href="/About_us") About us
               li.info
                 a.grey-text.text-lighten-3(href="#!") Contact us
               li.info
