--- a/views/bidder/show.jade
+++ b/views/bidder/show.jade
@@ -2,23 +2,11 @@ extends ../layout
 
 block content
 
-  div.container
-    h1=title
-    
-    div.switch
-      label Notification
-       Off
-       input(type="checkbox")
-       span.lever
-       On
-      
-    div.row
-     form.col.s12
-       div.row
-         div.input-field.col.s12
-           i.material-icons.prefix mode_edit
-           textarea#icon_prefix2.materialize-textarea
-           label(for="icon_prefix2") Message
+  div
+    p=message
+
+    a.btn.waves-effect.waves-light(href='/bids-sent/:id/meetup', type="submit", name="action") Accept
+      i.material-icons.right send
 
 
 
