--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,14 +13,31 @@ a {
 
 #tenders {
   float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid grey;
+  border-radius: 2%;
+  margin-left: 50px;
 }
 
 #bids {
   float: right;
+  margin-right: 50px;
+}
+
+#bids-sent {
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid grey;
+  border-radius: 2%;
 }
 
 #bids-received {
   margin-top: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid grey;
+  border-radius: 2%;
 }
 
 main {
