--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,12 @@ extends layout
 
 block content
   h1 Welcome to Trade It Splash Page!
+  
+  if !user
+    a(href='/auth/facebook') log in with facebook
+  if user
+    a(href='/auth/logout') log out
+    p welcome #{user.displayName}
 
   form(action='/' method='POST')
     input(type='text' name='username' placeholder='facebook username')
