--- a/views/bidder/index.jade
+++ b/views/bidder/index.jade
@@ -8,7 +8,8 @@ block content
       div.col.s12.m10
         div.card.blue-grey.darken-1
              div.card-content.white-text
-               span.card-titleCard Jess Lee
+               span.card-titleCard 
+               h3= tenders.name
                p I am a very simple card. I am good at containing small bits of information.
                 | I am convenient because I require little markup to use effectively.
                p Descrption:
@@ -16,12 +17,13 @@ block content
                p Type:
                 p= tenders.tender_type
              div.card-action
-               a(href="/bids-sent/:id") Check it out
+               a(href="/bids-sent/"+tenders.user_id) Check it out
     div.row
       div.col.s12.m10
         div.card.blue-grey.darken-1
              div.card-content.white-text
-               span.card-titleCard Jimothy Watkins
+               span.card-titleCard 
+               h3= tenders.name
                p I am a very simple card. I am good at containing small bits of information.
                 | I am convenient because I require little markup to use effectively.
                 p Descrption:
@@ -29,7 +31,7 @@ block content
                 p Type:
                  p= tenders.tender_type
              div.card-action
-              a(href="#") Check it out
+              a(href="/bids-sent/"+tenders.user_id) Check it out
 
 
        
