--- a/views/bidder/show.jade
+++ b/views/bidder/show.jade
@@ -2,12 +2,22 @@ extends ../layout
 
 block content
 
-  div
-    p=message
-
-    a.btn.waves-effect.waves-light(href='/bids-sent/:id/meetup', type="submit", name="action") Accept
-      i.material-icons.right send
-
+  if tenders
+  
+  div.row
+    div.col.s12.m10
+      div.card.blue-grey.darken-1
+         div.card-content.white-text
+           span.card-titleCard 
+           h3= tenders.name
+           p I am a very simple card. I am good at containing small bits of information.
+            | I am convenient because I require little markup to use effectively.
+           p Descrption:
+            p= tenders.description
+           p Type:
+            p= tenders.tender_type
+         div.card-action
+           a(href="/bids-sent/"+tenders.user_id) Make an offer
 
 
     
