added profile and tender sections of profile page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,8 @@ html
   body
 
     ul#dropdown2.dropdown-content
+      li 
+        a(href="/users/:id") My Profile
       li
         a(href="#") My bids
       li
@@ -22,7 +24,7 @@ html
               a(href="#") Logout
     nav
       div.nav-wrapper
-        a.brand-logo(href="#") Trade it!
+        a.brand-logo(href="/index") Trade it!
         ul.right.hide-on-med-and-down
           li.navText
             a(href="/index") Home
