--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,7 +19,7 @@ html
         a(href="#") Edit Profile
           li.divider
             li
-              a(href="#") Logout
+              a(href="/auth/logout") Logout
     nav
       div.nav-wrapper
         a.brand-logo(href="#") Trade it!
