still need user id number input into link

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html
 
     ul#dropdown2.dropdown-content
       li 
-        a(href="/users/#{user.user_id}") My Profile
+        a(href="/users/:id") My Profile
       li
         a(href="#") My bids
           li.divider
