--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -5,7 +5,8 @@ block content
     section#profile
       h3 #{users.username}'s Profile
       div.profile
-        h4 Picture: #{users.picture}
+        h4 Picture: 
+        img(src='#{users.profile_pic}', alt='Profile Picture')
         h4 About Me: #{users.about_me}
     section#my_tenders
       h3 My Tenders
