--- a/views/bidder/show.jade
+++ b/views/bidder/show.jade
@@ -17,7 +17,7 @@ block content
              p Type:
               p= tenders.tender_type
            div.card-action
-             a(href="/bids-sent/"+tenders.id) Make an offer
+             a(href="/bids-sent/new") Make an offer
 
 
     
