--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,13 +11,13 @@ html
     link(href='/css/age-verification.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
+    link(rel='stylesheet', href='/stylesheets/style_splash.css')
     
   body
 
     ul#dropdown2.dropdown-content
       li 
         a(href="/users/2") My Profile
-        //need to figure out how to access user_id into about href
       li
         a(href="#") My bids
           li.divider
@@ -35,19 +35,11 @@ html
             a.dropdown-button(href="#", data-activates="dropdown2") Profile
               i.material-icons.right
                 | arrow_drop_down
-<<<<<<< HEAD
 
 
     block content
     main
-    
-=======
 
-    block content
-
-    main
-
->>>>>>> 4c9264ba060956776cacc9f79360cfdd9ee23176
     footer.page-footer
       div.container
         div.row
