--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,18 @@
 extends layout
 
 block content
-  h1 Welcome to Trade It Splash Page!
-
-
-
-  form(action='/auth/facebook' method='GET')
-    if !user
-      input(type='submit' name='submit' value='log in with facebook')
-    if user
-      p welcome #{user.displayName}
-
+  
+  body.splash
+      
+  
+    div.container  
+      form(action='/auth/facebook' method='GET')
+        if !user
+          button.btn.waves-effect.waves-light(type="submit" name='submit' value='log in with facebook') Facebook Login
+        if user
+          p welcome #{user.displayName}
+    div.centerLogo
+      img(src="../img/tradeit_1024.png")
 
 
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
