--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -15,3 +15,4 @@ block content
           h4 Name: #{tender.name}
           h4 Description: #{tender.description}
           h4 Type: #{tender.tender_type}
+      a(href='/users/#{users.id}/edit') Edit your profile
