--- a/views/index.jade
+++ b/views/index.jade
@@ -11,8 +11,8 @@ block content
           button.btn.waves-effect.waves-light(type="submit" name='submit' value='log in with facebook') Facebook Login
         if user
           p welcome #{user.displayName}
-    div.centerLogo
-      img(src="../img/tradeit_1024.png")
+    div.centerLogo.valign-wrapper.z-depth-5
+      img#tradeit(src="../img/tradeit_1024.png")
 
 
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
