--- a/views/tenders/new.jade
+++ b/views/tenders/new.jade
@@ -5,7 +5,7 @@ block content
   form(action='/tenders', method='post')
     input(type='textarea', name='name', value='', placeholder='Name')
     input(type='textarea', name='description', value='', placeholder='Description')
-    select(name='type')
+    select(name='tender_type')
       option(value='default', selected='', disabled='') Type
       option(value='service') Service
       option(value='goods') Goods
