--- a/public/stylesheets/style_splash.css
+++ b/public/stylesheets/style_splash.css
@@ -6,10 +6,10 @@ div.container{
   margin-top: 0px;
 }
 .centerLogo{
-  width: 830px;
-  height: 320px;
+  width: 55%;
+  height: 270px;
   margin-top: 8%;
-  margin-left: 25%;
+  margin-left: 22%;
   background-color: white;
   position: relative;
   opacity: .9;
@@ -22,17 +22,23 @@ form{
   margin-top: 0;
 }
 
-img{
-  height: 300px;
-  width: 800px;
+.splashImage{
+  height: 95%;
+  width: 95%;
   position: absolute;
 }
 
-
 .btn{
   background-color: #3B5998;
-  width: 200px;
-  height: 60px;
-  margin-left: 98%;
-  margin-top: 3%
+  width: 15%;
+  height: 10%;
+  margin-left: 38%;
+  margin-top: 33%;
+  border-radius: 50%;
+  position: absolute;
+  font: bolder;
+  font-family: Quicksand;
+  box-shadow: 10px 10px 5px #2a2a2a;
+  padding: 0;
+  opacity: .9;
 }
