--- a/views/index.jade
+++ b/views/index.jade
@@ -8,11 +8,11 @@ block content
     div.container  
       form(action='/auth/facebook' method='GET')
         if !user
-          button.btn.waves-effect.waves-light(type="submit" name='submit' value='log in with facebook') Facebook Login
+          button.btn.waves-effect.waves-light(type="submit" name='submit' value='log in with facebook') Login With Facebook
         if user
           p welcome #{user.displayName}
     div.centerLogo
-      img(src="../img/tradeit_1024.png")
+      img.splashImage(src="../img/tradeit_1024.png")
 
 
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
