--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-color: #f6f6f6;
+  background-color: #E6E2DF;
 }
 
 a {
@@ -50,6 +50,7 @@ main {
 nav .brand-logo{
   font-family: La Belle Aurore;
   color: #2a2a2a;
+
 }
 
 nav{
