--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html
     link(href='/css/age-verification.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
+    link(rel='stylesheet', href='/stylesheets/tenders/style_index.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
     
   body
