styled profile page

--- a/views/users/show.jade
+++ b/views/users/show.jade
@@ -3,10 +3,10 @@ extends ../layout
 block content
   main
     section#profile
-      h3 #{users.username}'s Profile
+      h3.username #{users.username}'s Profile
       div.profile
         h4 Picture: 
-        img(src='#{users.profile_pic}', alt='Profile Picture')
+        img.profile_picture(src='#{users.profile_pic}', alt='Profile Picture')
         h4 About Me: #{users.about_me}
     section#my_tenders
       h3 My Tenders
