--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -3,8 +3,8 @@
   background-color: #FAE268;
   font-family: Quicksand;
   padding-left: 5%;
-  margin-top: 2%;
-  box-shadow: 10px 10px 5px black;
+  margin-top: 4%;
+  box-shadow: 20px 20px 10px black;
 }
 #my_tenders{
   border: 2px solid black;
@@ -13,8 +13,9 @@
   text-align: center;
   width: 50%;
   margin-left: 25%;
-  margin-top: 5%;
-  box-shadow: 10px 10px 5px black;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  box-shadow: 20px 20px 10px black;
 }
 h3, h4, p{
   font-family: Quicksand;
@@ -29,4 +30,9 @@ h3, h4, p{
 .profile-tender{
   border: 2px solid black;
   padding: 5px;
+}
+.foo{
+  background-image: url("http://g01.a.alicdn.com/kf/HTB1jts0IXXXXXcFXpXXq6xXFXXXQ/12x8FT-font-b-Dark-b-font-Orange-Wooden-Planks-Vintage-font-b-Texture-b-font-font.jpg");
+  background-size: contain;
+  height: 100%:
 }
