--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
     link(rel='stylesheet', href='/stylesheets/users/style_profile.css')
+    link(rel='stylesheet', href='/stylesheets/style_dashboard.css')
     
   body
 
