--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  main.dash
+  body.dash
+  main
     section#tenders-dash
       h3 Items for Trade
       for tender in tenders
