--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -34,5 +34,6 @@ h3, h4, p{
 .foo{
   background-image: url("http://g01.a.alicdn.com/kf/HTB1jts0IXXXXXcFXpXXq6xXFXXXQ/12x8FT-font-b-Dark-b-font-Orange-Wooden-Planks-Vintage-font-b-Texture-b-font-font.jpg");
   background-size: contain;
-  height: 100%:
+  height: 100%;
+  opacity: .8;
 }
