FAQ, aboutus, contactus styling

--- a/views/about_us.jade
+++ b/views/about_us.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1 Tradeit
-  h3 Here at Tradeit we are a group of people with an idea that the world can be a barter, ummmm, I mean better place.  The waste produced in the United States is not sustainable.  We not only lack room for further landfills, there is a clear environmental impact as well.  We also are big supporters of local community, and therein of getting out and meeting your neighbors.  With Tradeit the exchange of items between strangers is facilitated in a non-obtrusive, safe way.  Hopefully through the use of our site we can bring additional value to our users lives, and help the world along the way.
+  body.about_us
+    div.about_us_material
+      h1 Tradeit
+      h3 Here at Tradeit we are a group of people with an idea that the world can be a barter, ummmm, I mean better place.  The waste produced in the United States is not sustainable.  We not only lack room for further landfills, there is a clear environmental impact as well.  We also are big supporters of local community, and therein of getting out and meeting your neighbors.  With Tradeit the exchange of items between strangers is facilitated in a non-obtrusive, safe way.  Hopefully through the use of our site we can bring additional value to our users lives, and help the world along the way.
