--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
     link(rel='stylesheet', href='/stylesheets/users/style_profile.css')
     link(rel='stylesheet', href='/stylesheets/style_dashboard.css')
+    link(rel='stylesheet', href='/stylesheets/style_FAQ.css')
+    link(rel='stylesheet', href='/stylesheets/style_about_us.css')
+    link(rel='stylesheet', href='/stylesheets/style_contact_us.css')
     
   body
 
