--- a/views/FAQ.jade
+++ b/views/FAQ.jade
@@ -1,14 +1,16 @@
 extends layout
 
 block content
-  h1 Frequently Asked Questions:
-  h2 What exactly is TradeIt?
-  h3 TradeIt is a site where you can connect with other users to trade goods and/or services.
-  h2 Does using Tradeit cost any money?
-  h3 No, TradeIt is free to use.
-  h2 Is TradeIt safe to use?
-  h3 Here at Tradeit we do everything within our power to facilitate safe transactions.  All your user information is kept private until you decide to share it.  Also it is our plan to provide an evolving list of safe locations where transactions can take place.
-  h2 What kinds of items/services are traded on TradeIt?
-  h3 TradeIt ask all it users to respect the laws governing their area of transactions.  That being said, the only limit to what can be bartered, is the imagination of our users.
-  h2 Why should I use TradeIt?
-  h3 At TradeIt we believe everyone has unused items.  Some of these may have actual value to neighbors in your geographical region.  We can help you facilitate getting that value for your unused items.  This way we're reducing overall waste, and helping you save money.
+  body.FAQ
+    div.FAQ_questions
+      h1 Frequently Asked Questions:
+      h2 What exactly is TradeIt?
+      h3 TradeIt is a site where you can connect with other users to trade goods and/or services.
+      h2 Does using Tradeit cost any money?
+      h3 No, TradeIt is free to use.
+      h2 Is TradeIt safe to use?
+      h3 Here at Tradeit we do everything within our power to facilitate safe transactions.  All your user information is kept private until you decide to share it.  Also it is our plan to provide an evolving list of safe locations where transactions can take place.
+      h2 What kinds of items/services are traded on TradeIt?
+      h3 TradeIt ask all it users to respect the laws governing their area of transactions.  That being said, the only limit to what can be bartered, is the imagination of our users.
+      h2 Why should I use TradeIt?
+      h3 At TradeIt we believe everyone has unused items.  Some of these may have actual value to neighbors in your geographical region.  We can help you facilitate getting that value for your unused items.  This way we're reducing overall waste, and helping you save money.
