--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,10 +1,11 @@
 extends layout
 
 block content
-  h1 Contact Us
-  form(action='/contact' method='POST')
-    input(type='text' name='name' placeholder='name (optional)')
-    input(type='email' name='email' placeholder='email address (if you want a response)')
-    input(type='text' name='subject' placeholder='subject')
-    textarea(name='message' placeholder='message')
-    input(type='submit' name='send')
+  body.contact
+    h1 Contact Us
+    form.contact_us(action='/contact' method='POST')
+      input(type='text' name='name' placeholder='name (optional)')
+      input(type='email' name='email' placeholder='email address (if you want a response)')
+      input(type='text' name='subject' placeholder='subject')
+      textarea(name='message' placeholder='message')
+      input(type='submit' name='send')
