--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -1,6 +1,6 @@
 #profile{
   border: 2px solid black;
-  background-color: #FAE268;
+  background-color: #81B1B6;
   font-family: Quicksand;
   padding-left: 5%;
   margin-top: 4%;
@@ -32,7 +32,7 @@ h3, h4, p{
   padding: 5px;
 }
 .foo{
-  background-image: url("http://g01.a.alicdn.com/kf/HTB1jts0IXXXXXcFXpXXq6xXFXXXQ/12x8FT-font-b-Dark-b-font-Orange-Wooden-Planks-Vintage-font-b-Texture-b-font-font.jpg");
+  background-image: url("http://www.publicdomainpictures.net/pictures/20000/velka/orangeyellow-background-1328283264Q9r.jpg");
   background-size: contain;
   height: 100%;
   opacity: .8;
