fixed href for profiles

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -6,7 +6,7 @@ block content
   script(src='js/dashboard_carousel.js')
   body.dash
   main
-    .carousel
+    .carousel.slider
       a.carousel-item.boo(href='#one!')
         img(src='https://www.sethsbikehacks.com/wp-content/uploads/2016/06/mongoose-dolomite.jpg')
       a.carousel-item.boo(href='#two!')
