--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,7 +22,7 @@ html
 
     ul#dropdown2.dropdown-content
       li 
-        a(href="/users/2") My Profile
+        a(href="/users/#{current_user_id}") My Profile
       li
         a(href="#") My bids
           li.divider
