added gradients yo

--- a/public/stylesheets/style_about_us.css
+++ b/public/stylesheets/style_about_us.css
@@ -1,6 +1,9 @@
 .about_us{
-  background-color: #a5c7cc;
-  opacity: .9;
+  background: white; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, white , #7FB0B7); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, white, #7FB0B7); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, white, #7FB0B7); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, white , #7FB0B7); /* Standard syntax */
 }
 .about_us_material{
   padding: 5%;
