--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -32,8 +32,9 @@ h3, h4, p{
   padding: 5px;
 }
 .foo{
-  background-image: url("http://www.publicdomainpictures.net/pictures/20000/velka/orangeyellow-background-1328283264Q9r.jpg");
-  background-size: contain;
-  height: 100%;
-  opacity: .8;
+  background: white; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, white , #7FB0B7); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, white, #7FB0B7); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, white, #7FB0B7); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, white , #7FB0B7); /* Standard syntax */
 }
