--- a/public/stylesheets/tenders/style_index.css
+++ b/public/stylesheets/tenders/style_index.css
@@ -1,3 +1,34 @@
-#tender_index{
-  background-image: url("../img/where-we-service.jpg");
+body#tender_index{
+  overflow: scroll;
+}
+
+div#all{
+    padding: 35px;
+    display: inline-block;
+  }
+
+div#add_tender_butt{
+  width: 270px;
+  height: 100px;
+}
+
+.btn-large {
+  background-color:white;
+  border: #59955C solid 5px;
+  color: black;
+  width: 250px;
+  height: 80px;
+  font-size: 25px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+}
+
+div.card.sticky-action{
+  width: 500px;
+  height: 300px;
+  margin-left: 1%;
+}
+div.card-image{
+  background-size: cover
 }
