consolidate public javascript folders, edit src in views

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
   script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
-  script(src='js/dashboard_carousel.js')
+  script(src='javascripts/dashboard_carousel.js')
   body.dash
   main
     .carousel
