--- a/views/layout.jade
+++ b/views/layout.jade
@@ -68,5 +68,5 @@ html
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js")
-  script(type="text/javascript", src="/javascript/main.js")
+  script(type="text/javascript", src="/javascripts/main.js")
   script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
