--- a/views/index.jade
+++ b/views/index.jade
@@ -17,4 +17,4 @@ block content
 
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
   script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
-  script(src='js/age-verification.js')
+  script(src='javascripts/age-verification.js')
