--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     link(href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css", rel="stylesheet")
     link(type="text/css", rel="stylesheet", href="css/materialize.min.css", media="screen,projection")
     link(rel="stylesheet", href="/stylesheets/style.css")
-    link(href='/css/age-verification.css', rel='stylesheet')
+    link(href='/stylesheets/age-verification.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
