--- a/public/stylesheets/Users/style_profile.css
+++ b/public/stylesheets/Users/style_profile.css
@@ -32,9 +32,5 @@ h3, h4, p{
   padding: 5px;
 }
 .foo{
-  background: white; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, white , #7FB0B7); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, white, #7FB0B7); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, white, #7FB0B7); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, white , #7FB0B7); /* Standard syntax */
+  background-color: #f6f6f6;
 }
