--- a/public/stylesheets/style_dashboard.css
+++ b/public/stylesheets/style_dashboard.css
@@ -25,11 +25,7 @@
   width: 40%;
 }
 .dash{
-  background: white; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, white , #7FB0B7); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, white, #7FB0B7); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, white, #7FB0B7); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, white , #7FB0B7); /* Standard syntax */
+  background-color: #f6f6f6;
 }
 .dash-link{
   color: black;
