--- a/public/stylesheets/tenders/style_show.css
+++ b/public/stylesheets/tenders/style_show.css
@@ -1,6 +1,6 @@
 .tender_show{
   border: 2px solid black;
-  width: 60%;
+  width: 65%;
   margin-left: 20%;
   margin-bottom: 25px;
   background-color: white;
@@ -9,23 +9,20 @@
 }
 
 .show_tender{
-  background: white; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, white , #7FB0B7); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, white, #7FB0B7); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, white, #7FB0B7); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, white , #7FB0B7); /* Standard syntax */
+  background-color: #f6f6f6;
 }
 
 .make_offer{
   color: black;
   font-size: 30px;
   border: 2px solid black;
-  width: 15%;
-  margin-left: 42%;
+  width: 25%;
+  margin-top: 3%;
   text-align: center;
   padding: 1%;
   border-radius: 5%;
   background-color: #FAE268;
+  font-family: Quicksand;
 }
 
 .make_offer:hover{
@@ -35,4 +32,12 @@
 
 .show_tender_heading{
   font-family: Quicksand;
+}
+
+.bid_description{
+  height: 100px;
+  width: 300px;
+  margin-right: 10%;
+  margin-top: 2%;
+  text-align: center;
 }
