--- a/views/bids_sent/new.jade
+++ b/views/bids_sent/new.jade
@@ -8,7 +8,7 @@ block content
         div.input-field.col.s6
           input#user_id(type="hidden", value="", class="validate")
         div.input-field.col.s6
-          input#tender_id(type="hidden", value=`${req.params.id}`, class="validate")
+          input#tender_id(type="hidden", value='#{current_user_id}', class="validate")
         div.input-field.col.s6
           i.material-icons.prefix account_circle
           input#icon_prefix(type="text", class="validate")
