--- a/public/stylesheets/style_dashboard.css
+++ b/public/stylesheets/style_dashboard.css
@@ -1,3 +1,10 @@
+#map{
+  height:80vh;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+}
 #tenders-dash{
   background-color: #7FB0B7;
   border: 2px solid black;
