--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -4,6 +4,9 @@ block content
   script(src='https://code.jquery.com/jquery-2.1.1.min.js')
   script(src='http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js')
   script(src='javascripts/dashboard_carousel.js')
+  script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCok34iyxN15XU51R9pAvSOcdQVRb9m_0Y&callback=initMap"
+        type="text/javascript")
+  script(src='javascripts/map.js')
   body.dash
   main
     section.carousel.slider
