--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -33,11 +33,13 @@ block content
     section#bids
       section#bids-sent
         h3 My Bids Sent
-          //- for bid in bids-sent
-          //-   div.dashboard-bids-sent
+        for bid in bids_sent
+          div.dashboard-bids-sent
+            p Tender ID: #{bid.tender_id}
+            p Offer Description: #{bid.description}
+            p Response: #{bid.response}
+            p User Id: #{bid.user_id}
         a.dash-link(href='/bids-sent') View all Bids Sent
       section#bids-received
         h3 My Bids Received
-          //- for bid in bids-received
-          //-   div.dashboard-bids-received
         a.dash-link(href='/bids-received') View all Bids Received
