--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -18,4 +18,5 @@ block content
         p Change profile picture:
         input(type='file', name='profile_pic', accept='image/*')
         input(type='number', name='facebook_id', value='#{facebook_id}', hidden)
+        input(type='string', name='position', value='#{position}', hidden)
         input#submit_button(type='submit', name='', value='Submit Profile')
