--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -42,21 +42,13 @@ block content
             p Tender ID: #{bid.tender_id}
             p Offer Description: #{bid.description}
             p Response: #{bid.response}
-            p User Id: #{bid.user_id}
-        a.dash-link(href='/bids-sent') View all Bids Sent
-      section#bids-received
-        h3 My Bids Received
-          for bid in bids_sent
-            div.dashboard-bids-sent
-              p=bid.tender_id
-              p=bid.description
-              p=bid.user_id
         a.dash-link(href='/bids-sent') View all Bids Sent
       section#bids-received
         h3 My Bids Received
           for bid in bids_received
             div.dashboard-bids-received
-              p=bid.tender_id
-              p=bid.description
-              p=bid.user_id
+              p Tender ID: #{bid.tender_id}
+              p Offer Description: #{bid.description}
+              p User Id: #{bid.user_id}
+              p Response: #{bid.response}
         a.dash-link(href='/bids-received') View all Bids Received
