tenders index and create new page shaping up

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bidder/style_index.css')
     link(rel='stylesheet', href='/stylesheets/bidder/style_show.css')
     link(rel='stylesheet', href='/stylesheets/tenders/style_index.css')
+    link(rel='stylesheet', href='/stylesheets/tenders/style_new.css')
     link(rel='stylesheet', href='/stylesheets/style_splash.css')
     link(rel='stylesheet', href='/stylesheets/style_profile.css')
     
