--- a/public/stylesheets/tenders/style_index.css
+++ b/public/stylesheets/tenders/style_index.css
@@ -1,11 +1,15 @@
-body#tender_index{
-  overflow: scroll;
+#parent{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-div#all{
-    padding: 35px;
-    display: inline-block;
-  }
+#all{
+  overflow: scroll;
+  display: inline-block;
+}
 
 div#add_tender_butt{
   width: 270px;
@@ -14,20 +18,22 @@ div#add_tender_butt{
 
 .btn-large {
   background-color:white;
-  border: #59955C solid 5px;
+  border: black solid 3px;
   color: black;
-  width: 250px;
-  height: 80px;
+  width: 260px;
+  height: 65px;
   font-size: 25px;
   margin-top: 2%;
   margin-bottom: 2%;
 
 }
 
-div.card.sticky-action{
+div.col.s12.m7{
   width: 500px;
   height: 300px;
   margin-left: 1%;
+  display: inline-block;
+
 }
 div.card-image{
   background-size: cover
