--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
     div.container  
       form(action='/auth/facebook' method='GET')
         if !user
-          button.btn.waves-effect.waves-light(type="submit" name='submit' value='log in with facebook') Login With Facebook
+          button.btn.waves-effect.waves-light#fb(type="submit" name='submit' value='log in with facebook') Login With Facebook
         if user
           p welcome #{user.displayName}
     div.centerLogo.valign-wrapper.z-depth-5
